[gd_scene load_steps=4 format=2]

[ext_resource path="res://items/ranged_weapon.gd" type="Script" id=1]
[ext_resource path="res://projectiles/bloody_curse_projectile/bloody_curse_projectile.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 120.004

[node name="BloodyCurse" type="Node2D"]
script = ExtResource( 1 )
projectile_scene = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AttackCooldown" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
